--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <div class="container">
 <section class="toppersec">
   <nav>
     <a href="#services">Services</a>
@@ -29,23 +30,30 @@
     </section>
     
     <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
-    <hr>
-
+    
+<section class="sec_services">
 <div class=services>
 <h1>Services</h1>
 
 <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
 </div>
-<div class="digital_design">
+</section>
+
+<hr>
+<section class="topsec">
+  <div class="box">
 
   <h2>Digital Design</h2>
 
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
-</div>
-<botton>Learn More</botton>
 
-<div>
+<button>Learn More</button>
+</div>
+
+
+
+<div class="box">
 <h2>UX / UI</h2>
 
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
@@ -54,7 +62,8 @@ eleifend. Mauris euismod facilisis iaculis.</p>
 <button>Learn More</button>
 </div>
 
-<div>
+
+<div class="box">
 <h2>Digital Marketing</h2>
 
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
@@ -62,8 +71,13 @@ eleifend. Mauris euismod facilisis iaculis.</p>
 
 <button>Learn More</button>
 </div>
+</section>
 
+<section class="middle">
 <div>
+    <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+</div>
+<div id="box">
 <h2>Web Development</h2>
 
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
@@ -71,8 +85,10 @@ eleifend. Mauris euismod facilisis iaculis.</p>
 
 <button>Learn More</button>
 </div>
+</section>
 
-<div>
+<section class="middle_two">
+<div class="box">
 <h2>IOS Development</h2>
 
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
@@ -81,7 +97,7 @@ eleifend. Mauris euismod facilisis iaculis.</p>
 <button>Learn More</button>
 </div>
 
-<div>
+<div class="box">
 <h2>Android Development</h2>
 
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
@@ -89,26 +105,30 @@ eleifend. Mauris euismod facilisis iaculis.</p>
 
 <button>Learn More</button>
 </div>
+</section>
 
-<div>
+<section class="bottom">
+<div class="box">
 <h2>Some Facts About Our Services</h2>
 
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
-
+</div>
+<div class="box">
 <ul>
 <li>Awesome thing</li>
 <li>Amazing thing</li>
 <li>Cool thing</li>
 <li>Great thing</li>
 </ul>
-<div>
-<hr>
-<footer>
-<img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-
+</div>
+</section>
+<footer class="service_footer">
 Copyright Great Idea! 2018
 </footer>
+</div>
+
 </body>
+
 
 </html>
